feat: finish part 2 (i think) i have doubts about tests
i think tests 5, 6, 7 are the same as the first two and another one (maybe i've done first tests wrong)

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -10,6 +10,7 @@
     </PackageVersion>
     <PackageVersion Include="FluentAssertions" Version="7.0.0-alpha.4" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.11.0" />
+    <PackageVersion Include="NSubstitute" Version="5.1.0" />
     <PackageVersion Include="SourceKit.Analyzers.Collections" Version="1.0.34" />
     <PackageVersion Include="SourceKit.Analyzers.Enumerable" Version="1.0.34" />
     <PackageVersion Include="SourceKit.Analyzers.MemberAccessibility" Version="1.0.31" />
