--- a/src/lab-2/Task2/Task2.csproj
+++ b/src/lab-2/Task2/Task2.csproj
@@ -7,9 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Http" />
-      <PackageReference Include="Refit" />
-      <PackageReference Include="Refit.HttpClientFactory" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" />
+      <PackageReference Include="Microsoft.Extensions.Options" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Task1\Task1.csproj" />
     </ItemGroup>
 
 </Project>
