--- a/src/lab-2/docker-compose.yaml
+++ b/src/lab-2/docker-compose.yaml
@@ -12,6 +12,19 @@ services:
     networks:
       - configuration-service-network
   
+  postgres2:
+    image: postgres:latest
+    container_name: lab-2-task-3-postgres
+    environment:
+      - POSTGRES_USER=viox
+      - POSTGRES_PASSWORD=123
+      - POSTGRES_DB=hehe
+    ports:
+      - "5433:5432"
+    restart: unless-stopped
+    networks:
+      - configuration-service-network
+  
   configuration-service:
     image: ghcr.io/is-csms-y26/lab-2-tools:master
     platform: linux/amd64
