--- a/tests/lab-2/Task3MainFunction/Task3MainFunction.csproj
+++ b/tests/lab-2/Task3MainFunction/Task3MainFunction.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>Task3MainFuncion</RootNamespace>
+        <OutputType>Exe</OutputType>
     </PropertyGroup>
 
     <ItemGroup>
