--- a/.editorconfig
+++ b/.editorconfig
@@ -12,6 +12,8 @@ dotnet_diagnostic.ide0002.severity = warning
 dotnet_diagnostic.sa0001.severity = none
 dotnet_diagnostic.ide0003.severity = warning
 dotnet_diagnostic.ide0009.severity = warning
+dotnet_diagnostic.IDE0220.severity = error
+
 dotnet_style_qualification_for_field = false:warning
 dotnet_style_qualification_for_property = false:warning
 dotnet_style_qualification_for_method = false:warning
@@ -450,6 +452,7 @@ dotnet_diagnostic.ca1854.severity = suggestion
 dotnet_diagnostic.ca2000.severity = suggestion
 # dotnet_diagnostic.CA2000.severity = warning
 dotnet_diagnostic.ca2002.severity = none
+dotnet_diagnostic.ca2007.severity = none
 dotnet_diagnostic.ca2008.severity = none
 dotnet_diagnostic.ca2009.severity = warning
 dotnet_diagnostic.ca2011.severity = warning
