--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -13,6 +13,9 @@
     <PackageVersion Include="FluentMigrator.Extensions.Postgres" Version="6.2.0" />
     <PackageVersion Include="FluentMigrator.Runner" Version="6.2.0" />
     <PackageVersion Include="Google.Api.CommonProtos" Version="2.16.0" />
+    <PackageVersion Include="Grpc.AspNetCore" Version="2.67.0-pre1" />
+    <PackageVersion Include="Grpc.AspNetCore.Server.Reflection" Version="2.67.0-pre1" />
+    <PackageVersion Include="Grpc.Net.Client" Version="2.67.0-pre1" />
     <PackageVersion Include="Itmo.Dev.Platform.Common" Version="1.1.112" />
     <PackageVersion Include="Microsoft.Extensions.Configuration" Version="9.0.0-rc.2.24473.5" />
     <PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="9.0.0-rc.2.24473.5" />
