--- a/src/lab-4/GrpcServer/GrpcServer.csproj
+++ b/src/lab-4/GrpcServer/GrpcServer.csproj
@@ -14,6 +14,7 @@
     <ItemGroup>
         <PackageReference Include="Google.Api.CommonProtos" />
         <PackageReference Include="Grpc.AspNetCore" Version="2.57.0"/>
+        <PackageReference Include="Grpc.AspNetCore.Server.Reflection" />
     </ItemGroup>
 
     <ItemGroup>
