--- a/src/lab-4/GrpcServer/GrpcServer.csproj
+++ b/src/lab-4/GrpcServer/GrpcServer.csproj
@@ -7,8 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Protobuf Include="Protos\order.proto" GrpcServices="Server" />
-        <Protobuf Include="Protos\product.proto" GrpcServices="Server" />
+        <Protobuf ProtoRoot="Protos" Include="Protos\**\*.proto" Exclude="Protos\money.proto" GrpcServices="Server"/>
     </ItemGroup>
 
     <ItemGroup>
