--- a/src/lab-4/HttpGateway/HttpGateway.csproj
+++ b/src/lab-4/HttpGateway/HttpGateway.csproj
@@ -11,7 +11,7 @@
         <PackageReference Include="Google.Api.CommonProtos" />
         <PackageReference Include="Grpc.AspNetCore" />
         <PackageReference Include="Grpc.Net.Client" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" />
     </ItemGroup>
 
     <ItemGroup>
