fix: changes from code review

--- a/src/lab-1/Task3/Task3.csproj
+++ b/src/lab-1/Task3/Task3.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="Itmo.Dev.Platform.Common" />
+      <PackageReference Include="Refit" />
       <PackageReference Include="System.Linq.Async" />
     </ItemGroup>
 
