--- a/src/lab-1/Task1/Task1.csproj
+++ b/src/lab-1/Task1/Task1.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Refit" />
       <PackageReference Include="System.Linq.Async" />
     </ItemGroup>
 
