--- a/src/lab-3/AspDotNetApplication/AspDotNetApplication.csproj
+++ b/src/lab-3/AspDotNetApplication/AspDotNetApplication.csproj
@@ -17,6 +17,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Refit" />
       <PackageReference Include="Swashbuckle.AspNetCore" />
     </ItemGroup>
 
