--- a/src/lab-4/GrpcServer/GrpcServer.csproj
+++ b/src/lab-4/GrpcServer/GrpcServer.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="Google.Api.CommonProtos" />
         <PackageReference Include="Grpc.AspNetCore" />
         <PackageReference Include="Grpc.AspNetCore.Server.Reflection" />
+        <PackageReference Include="Refit" />
     </ItemGroup>
 
     <ItemGroup>
