--- a/src/lab-4/GrpcServer/appsettings.json
+++ b/src/lab-4/GrpcServer/appsettings.json
@@ -12,5 +12,9 @@
     "EndpointDefaults": {
       "Protocols": "Http2"
     }
+  },
+  "ExternalConnectionInfo": {
+    "host": "localhost",
+    "port": "8080"
   }
 }
