--- a/tests/lab-2/Task3MainFunction/Task3MainFunction.csproj
+++ b/tests/lab-2/Task3MainFunction/Task3MainFunction.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Refit" />
       <PackageReference Include="System.Linq.Async" />
     </ItemGroup>
 
