feat: finish producer

--- a/src/lab-4/GrpcServer/appsettings.json
+++ b/src/lab-4/GrpcServer/appsettings.json
@@ -15,6 +15,17 @@
   },
   "ExternalConnectionInfo": {
     "host": "localhost",
-    "port": "8080"
+    "port": "8081"
+  },
+  "ProducerOptions": {
+    "host": "localhost",
+    "port": "8001",
+    "topic": "order_creation",
+  },
+  "ConsumerOptions": {
+    "host": "localhost",
+    "port": "8001",
+    "topic": "order_processing",
+    "batchSize": 2
   }
 }
