--- a/src/lab-4/Kafka/Kafka.csproj
+++ b/src/lab-4/Kafka/Kafka.csproj
@@ -7,13 +7,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Consumer\" />
-    </ItemGroup>
-
-    <ItemGroup>
       <PackageReference Include="Confluent.Kafka" />
       <PackageReference Include="Google.Protobuf" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+      <PackageReference Include="Microsoft.Extensions.Options" />
+      <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" />
     </ItemGroup>
 
 </Project>
