feat: finish kafka consumer interfaces

--- a/src/lab-4/GrpcServer/appsettings.json
+++ b/src/lab-4/GrpcServer/appsettings.json
@@ -20,12 +20,13 @@
   "ProducerOptions": {
     "host": "localhost",
     "port": "8001",
-    "topic": "order_creation",
+    "topic": "order_creation"
   },
   "ConsumerOptions": {
     "host": "localhost",
     "port": "8001",
     "topic": "order_processing",
-    "batchSize": 2
+    "batchSize": 2,
+    "batchTimeout": "01:00:00"
   }
 }
