--- a/src/lab-4/Kafka/Kafka.csproj
+++ b/src/lab-4/Kafka/Kafka.csproj
@@ -9,11 +9,13 @@
     <ItemGroup>
       <PackageReference Include="Confluent.Kafka" />
       <PackageReference Include="Google.Protobuf" />
+      <PackageReference Include="Itmo.Dev.Platform.Common" />
       <PackageReference Include="Microsoft.Extensions.Configuration" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
       <PackageReference Include="Microsoft.Extensions.Options" />
       <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" />
+      <PackageReference Include="System.Linq.Async" />
     </ItemGroup>
 
 </Project>
