fix: message consumer, rest http enpdpoints

--- a/src/lab-4/GrpcServer/appsettings.json
+++ b/src/lab-4/GrpcServer/appsettings.json
@@ -27,6 +27,8 @@
     "port": "8001",
     "topic": "order_processing",
     "batchSize": 2,
-    "batchTimeout": "01:00:00"
+    "groupId": "someGroupId",
+    "groupInstanceId": "someInstanceId",
+    "batchTimeout": "00:00:2"
   }
 }
